Connected frontend to Render backend

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     const email = this.email.value.trim();
     const message = this.message.value.trim();
 
-    const response = await fetch("http://localhost:3000/send", {
+    const response = await fetch("https://contact-backend-dem5.onrender.com/send", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
