--- a/index.html
+++ b/index.html
@@ -190,6 +190,15 @@
       .dark-mode textarea::placeholder {
         color: #ddd;
       }
+      #loading {
+        font-size: 18px;
+        color: #333;
+        background-color: #f0f0f0;
+        padding: 12px 20px;
+        border-radius: 8px;
+        text-align: center;
+        margin-top: 10px;
+      }
     </style>
   </head>
   <body>
@@ -316,45 +325,48 @@
       </div>
     </section>
 
-<section class="container py-5" id="contact" data-aos="fade-up">
-  <h2 class="section-title">Contact Me</h2>
-  <form id="contactForm" name="contactForm">
-    <div class="row">
-      <div class="col-md-6 mb-3">
-        <input
-          type="text"
-          name="name"
-          class="form-control"
-          placeholder="Your Name"
-          required
-        />
-      </div>
-      <div class="col-md-6 mb-3">
-        <input
-          type="email"
-          name="email"
-          class="form-control"
-          placeholder="Your Email"
-          required
-        />
-      </div>
-    </div>
-    <div class="mb-3">
-      <textarea
-        class="form-control"
-        name="message"
-        rows="4"
-        placeholder="Your Message"
-        required
-      ></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary px-4">Send Message</button>
-  </form>
-</section>
+    <section class="container py-5" id="contact" data-aos="fade-up">
+      <h2 class="section-title">Contact Me</h2>
+      <form id="contactForm" name="contactForm">
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              placeholder="Your Name"
+              required
+            />
+          </div>
+          <div class="col-md-6 mb-3">
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              placeholder="Your Email"
+              required
+            />
+          </div>
+        </div>
+        <div class="mb-3">
+          <textarea
+            class="form-control"
+            name="message"
+            rows="4"
+            placeholder="Your Message"
+            required
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary px-4">Send Message</button>
+      </form>
+    </section>
 
-<div class="toast bg-success text-white" id="toast">
-  <div class="toast-body">Message sent successfully!</div>
-</div>
+    <div class="toast bg-success text-white" id="toast">
+      <div class="toast-body">Message sent successfully!</div>
+    </div>
+    <div id="loading" style="display: none; color: #555; font-weight: bold; margin-top: 10px">
+      Message sending...
+    </div>
 
     <footer>
       <p>
@@ -420,7 +432,6 @@
         link.addEventListener("click", function (e) {
           e.preventDefault();
 
-          // Smooth scroll with offset for fixed header
           const targetId = this.getAttribute("href").substring(1);
           const targetElement = document.getElementById(targetId);
           if (targetElement) {
@@ -436,7 +447,6 @@
             });
           }
 
-          // Collapse navbar if toggler visible
           const navbarToggler = document.querySelector(".navbar-toggler");
           const navbarCollapse = document.getElementById("navbarNav");
           if (
@@ -448,42 +458,65 @@
         });
       });
     </script>
+
     <script>
-  document.getElementById("contactForm").addEventListener("submit", async function (e) {
-    e.preventDefault();
+      document
+        .getElementById("contactForm")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault();
 
-    const name = this.name.value.trim();
-    const email = this.email.value.trim();
-    const message = this.message.value.trim();
+          const name = this.name.value.trim();
+          const email = this.email.value.trim();
+          const message = this.message.value.trim();
 
-    const response = await fetch("https://contact-backend-dem5.onrender.com/send", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({ name, email, message }),
-    });
+          // 👉 Show loading text before sending
+          const loadingDiv = document.getElementById("loading");
+          loadingDiv.style.display = "block";
 
-    const result = await response.json();
+          try {
+            const response = await fetch(
+              "https://contact-backend-dem5.onrender.com/send",
+              {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ name, email, message }),
+              }
+            );
 
-    if (response.ok) {
-      const toast = document.getElementById("toast");
-      toast.style.display = "block";
-      toast.classList.remove("bg-danger");
-      toast.classList.add("bg-success");
-      toast.querySelector(".toast-body").textContent = result.message || "Message sent successfully!";
-      setTimeout(() => (toast.style.display = "none"), 3000);
-      this.reset();
-    } else {
-      const toast = document.getElementById("toast");
-      toast.style.display = "block";
-      toast.classList.remove("bg-success");
-      toast.classList.add("bg-danger");
-      toast.querySelector(".toast-body").textContent = result.error || "Something went wrong!";
-      setTimeout(() => (toast.style.display = "none"), 3000);
-    }
-  });
-</script>
+            const result = await response.json();
 
+            // 👉 Hide loading after response
+            loadingDiv.style.display = "none";
+
+            const toast = document.getElementById("toast");
+            toast.style.display = "block";
+            toast.classList.remove("bg-danger", "bg-success");
+
+            if (response.ok) {
+              toast.classList.add("bg-success");
+              toast.querySelector(".toast-body").textContent =
+                result.message || "Message sent successfully!";
+              this.reset();
+            } else {
+              toast.classList.add("bg-danger");
+              toast.querySelector(".toast-body").textContent =
+                result.error || "Something went wrong!";
+            }
+
+            setTimeout(() => (toast.style.display = "none"), 3000);
+          } catch (err) {
+            loadingDiv.style.display = "none";
+            const toast = document.getElementById("toast");
+            toast.style.display = "block";
+            toast.classList.remove("bg-success");
+            toast.classList.add("bg-danger");
+            toast.querySelector(".toast-body").textContent =
+              "Something went wrong!";
+            setTimeout(() => (toast.style.display = "none"), 3000);
+          }
+        });
+    </script>
   </body>
 </html>
