Added loading message on form submit and toast updates

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="col-md-6 mb-4">
           <div class="card card-custom p-3">
             <h5>Portfolio</h5>
-            <p>This personal website built with HTML, CSS, JS...</p>
+            <p>I created a fully responsive and modern portfolio website using HTML, CSS, and JavaScript. It includes sections like About, Skills, Projects, and Contact, with features like dark mode, scroll animations (AOS), and typing effects (Typed.js). The contact form is connected to a Node.js (Express) backend hosted on Render, which sends emails and displays live status using toasts. I deployed the frontend using GitHub Pages, making the entire website live and accessible to all users on any device. This project showcases my full-stack development skills and attention to UI/UX design.</p>
           </div>
         </div>
       </div>
