Added loading message on form submit and toast updates

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
         text-align: center;
         margin-top: 10px;
       }
+      
+      
     </style>
   </head>
   <body>
@@ -370,7 +372,7 @@
 
     <footer>
       <p>
-        &copy; 2025 Prashant Patil  Follow me:
+        &copy; 2025 Prashant Patil | Follow me:
         <a href="#" class="text-white ms-2"><i class="fab fa-github"></i></a>
         <a href="#" class="text-white ms-2"><i class="fab fa-linkedin"></i></a>
         <a href="#" class="text-white ms-2"><i class="fab fa-twitter"></i></a>
@@ -407,7 +409,7 @@
 
         const hamburgerIcon = document.querySelector(".navbar-toggler-icon");
         if (document.body.classList.contains("dark-mode")) {
-          hamburgerIcon.style.filter = "invert(1)";
+          hamburgerIcon.style.filter = "invert(100%)";
         } else {
           hamburgerIcon.style.filter = "invert(0)";
         }
